# virasa

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  THIRD_PARTY_NOTICES.md  build_out.txt  output.txt  test_out.txt
.agents/cpp/: implementer.md
cmake/: VendorLibs.cmake
docs/: racing-next-session.md
examples/box-stack/: project.json
examples/box-stack/scenes/: main.scene.json
examples/dreidel/: project.json
examples/dreidel/scenes/: main.scene.json
examples/racing/: project.json
examples/racing/scenes/: main.scene.json
include/virasa/core/: Logger.h  logger.h
include/virasa/ecs/: ComponentAccess.h  ComponentSystem.h  Components.h  Scheduler.h  TransformSystem.h  Types.h  World.h
include/virasa/editor/: Buffer.h  CommandBarView.h  EditorApp.h  EditorView.h  EntityEditorView.h  HierarchyView.h  Motions.h  ViewManager.h
include/virasa/input/: Actions.h  Bindings.h  Resolver.h  StepBridge.h
include/virasa/math/: Projection.h  Transform.h  Types.h
include/virasa/physics/: CollisionMeshRegistry.h  PhysicsComponents.h  PhysicsWorld.h
include/virasa/renderer/: Types.h
include/virasa/sim/: AssetCatalog.h  BehaviorRegistry.h  Builtins.h  ComponentCodec.h  GameplayComponents.h  ProjectLoader.h  ProjectManifest.h  Scene.h  SceneSerializer.h  TerrainHeightField.h  TerrainMesh.h  Tick.h  TrackMesh.h  TrackSpline.h  VehicleComponent.h  WheelComponent.h
include/virasa/ui/: CommandBar.h  EntityEditorPanel.h  FontAtlas.h  HierarchyPanel.h  TextPanel.h  Types.h
include/virasa/window/: Events.h  InputState.h  Platform.h  Types.h  events.h  inputstate.h  types.h
shaders/: CMakeLists.txt  cube.frag  cube.vert  fullscreen.vert  jfa_seed.comp  jfa_step.comp  outline_composite.frag  outline_mask.frag  pick_clear.frag  pick_id.frag  pick_id.vert  shadow_depth.frag  shadow_depth.vert  terrain.frag  triangle.frag  triangle.vert  ui_image_quad.frag  ui_image_quad.vert  ui_quad.vert  ui_text.frag  ui_text.vert
src/virasa/core/: CMakeLists.txt  Logger.cpp  logger.cpp
src/virasa/ecs/: CMakeLists.txt  ComponentSystem.cpp  Scheduler.cpp  TransformSystem.cpp  World.cpp
src/virasa/editor/: Buffer.cpp  CMakeLists.txt  CommandBarView.cpp  EditorApp.cpp  EditorView.cpp  EntityEditorView.cpp  HierarchyView.cpp  Motions.cpp  ViewManager.cpp  main.cpp
src/virasa/editor/io/: GltfLoader.cpp  ImageLoader.cpp
src/virasa/input/: Bindings.cpp  CMakeLists.txt  Resolver.cpp  StepBridge.cpp
src/virasa/math/: CMakeLists.txt
src/virasa/physics/: CMakeLists.txt  PhysicsWorld.cpp
src/virasa/renderer/: CMakeLists.txt
src/virasa/renderer/core/: Context.cpp  Device.cpp  Instance.cpp  Surface.cpp  Swapchain.cpp
src/virasa/renderer/geometry/: Tangents.cpp
src/virasa/renderer/graph/: BufferRegistry.cpp  Graph.cpp  ImageRegistry.cpp  Pass.cpp
src/virasa/renderer/lighting/: LightTable.cpp  ShadowTable.cpp
src/virasa/renderer/material/: Visual.cpp
src/virasa/renderer/resources/: BindlessTextureArray.cpp  Buffer.cpp  Image.cpp  Mesh.cpp  MeshRegistry.cpp  Pipeline.cpp  Sampler.cpp  ShaderModule.cpp
src/virasa/renderer/scene/: CMakeLists.txt  SceneRenderer.cpp
src/virasa/renderer/text/: CMakeLists.txt  UiPass.cpp
src/virasa/sim/: AssetCatalog.cpp  BehaviorRegistry.cpp  Builtins.cpp  CMakeLists.txt  ComponentCodec.cpp  ProjectLoader.cpp  ProjectManifest.cpp  Scene.cpp  SceneSerializer.cpp  Tick.cpp
src/virasa/sim/behaviors/: ChaseCameraBehavior.cpp  PhysicsBehavior.cpp  SpinBehavior.cpp  VehicleBehavior.cpp
src/virasa/ui/: CMakeLists.txt  CommandBar.cpp  EntityEditorPanel.cpp  FontAtlas.cpp  HierarchyPanel.cpp  TextPanel.cpp
src/virasa/window/: CMakeLists.txt  InputState.cpp  Platform.cpp  inputstate.cpp
tests/virasa/core/: CMakeLists.txt  test_Logger.cpp
tests/virasa/ecs/: CMakeLists.txt  test_ComponentSystem.cpp  test_Components.cpp  test_Scheduler.cpp  test_TransformSystem.cpp  test_Types.cpp  test_World.cpp
tests/virasa/editor/: CMakeLists.txt  test_Buffer.cpp  test_CommandBarView.cpp  test_EditorApp.cpp  test_EditorView.cpp  test_EntityEditorView.cpp  test_HierarchyView.cpp  test_Motions.cpp  test_ViewManager.cpp
tests/virasa/editor/io/: test_GltfLoader.cpp  test_ImageLoader.cpp
tests/virasa/input/: CMakeLists.txt  test_Actions.cpp  test_Bindings.cpp  test_Resolver.cpp  test_StepBridge.cpp
tests/virasa/math/: CMakeLists.txt  test_Projection.cpp  test_Transform.cpp  test_Types.cpp
tests/virasa/physics/: CMakeLists.txt  test_CollisionMeshRegistry.cpp  test_PhysicsComponents.cpp  test_PhysicsWorld.cpp
tests/virasa/renderer/: CMakeLists.txt  test_Types.cpp
tests/virasa/renderer/core/: test_Context.cpp  test_Device.cpp  test_Instance.cpp  test_Surface.cpp  test_Swapchain.cpp
tests/virasa/renderer/geometry/: test_Primitives.cpp  test_Tangents.cpp
tests/virasa/renderer/graph/: test_BufferRegistry.cpp  test_Graph.cpp  test_ImageRegistry.cpp  test_Pass.cpp  test_Types.cpp
tests/virasa/renderer/lighting/: test_LightTable.cpp  test_ShadowTable.cpp
tests/virasa/renderer/material/: test_Visual.cpp
tests/virasa/renderer/resources/: test_BindlessTextureArray.cpp  test_Buffer.cpp  test_Image.cpp  test_Mesh.cpp  test_MeshRegistry.cpp  test_Pipeline.cpp  test_Sampler.cpp  test_ShaderModule.cpp
tests/virasa/renderer/scene/: CMakeLists.txt  test_SceneRenderer.cpp
tests/virasa/renderer/text/: CMakeLists.txt  test_UiPass.cpp
tests/virasa/sim/: CMakeLists.txt  test_AssetCatalog.cpp  test_BehaviorRegistry.cpp  test_Builtins.cpp  test_ComponentCodec.cpp  test_GameplayComponents.cpp  test_ProjectLoader.cpp  test_ProjectManifest.cpp  test_Scene.cpp  test_SceneSerializer.cpp  test_TerrainHeightField.cpp  test_TerrainMesh.cpp  test_Tick.cpp  test_TrackMesh.cpp  test_TrackSpline.cpp  test_VehicleComponent.cpp  test_WheelComponent.cpp
tests/virasa/sim/behaviors/: test_ChaseCameraBehavior.cpp  test_PhysicsBehavior.cpp  test_SpinBehavior.cpp  test_VehicleBehavior.cpp
tests/virasa/ui/: CMakeLists.txt  test_CommandBar.cpp  test_EntityEditorPanel.cpp  test_FontAtlas.cpp  test_HierarchyPanel.cpp  test_TextPanel.cpp  (+1 more)
(+38 files in other folders)
